Toolbar z-index fixed

--- a/site/components/nav/Nav.module.scss
+++ b/site/components/nav/Nav.module.scss
@@ -1,5 +1,6 @@
 .main {
     position: fixed;
+    z-index: 900;
     top: 0;
     left: 0;
     width: 100%;
