--- a/site/components/nav/Toolbar.module.scss
+++ b/site/components/nav/Toolbar.module.scss
@@ -1,5 +1,6 @@
 .main {
     position: fixed;
+    z-index: 900;
     bottom: 0;
     width: 100%;
     display: flex;
